# Project-os

./: CMakeLists.txt  README.md
client_gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ShmClient.cpp  ShmClient.h  SocketClient.cpp  SocketClient.h  main.cpp
server/: CMakeLists.txt  client_handler.cpp  client_handler.h  main.cpp  server.cpp  server.h
shared/: CMakeLists.txt  common.cpp  common.h  protocol.h
tests/: CMakeLists.txt  basic_test.cpp
